--- a/index.html
+++ b/index.html
@@ -836,31 +836,30 @@ confectioner"
             src="./images/inform/shape-sphere.269.png"
             alt="sphere"
           />
+
           <div>
-            <div>
-              <h2 class="inform-text">Необходимо больше информации?</h2>
-              <img
-                class="inform-img"
-                srcset="
-                  ./images/inform/Group155.png    1x,
-                  ./images/inform/Group155@2x.png 2x,
-                  ./images/inform/Group155@3x.png 3x
-                "
-                src="./images/inform/Group155.png"
-                alt="magazine-
+            <h2 class="inform-text">Необходимо больше информации?</h2>
+            <img
+              class="inform-img"
+              srcset="
+                ./images/inform/Group155.png    1x,
+                ./images/inform/Group155@2x.png 2x,
+                ./images/inform/Group155@3x.png 3x
+              "
+              src="./images/inform/Group155.png"
+              alt="magazine-
              confectioner"
-              />
-              <p class="inform-primary-text">
-                Если Вы владелец онлайн-магазина или только начинаете свой путь
-                в электронной коммерции и вам нужен уникальный дизайн онлайн
-                магазина для стартапа, обратитесь к нашему веб дизайнеру. За
-                выгодную цену и короткий период времени, он поможет
-                визуализировать ваш веб-проект.
-              </p>
-              <button class="primary-button-inform hoverandfocus" type="button">
-                <span class="primary-button-text">Оставить заявку</span>
-              </button>
-            </div>
+            />
+            <p class="inform-primary-text">
+              Если Вы владелец онлайн-магазина или только начинаете свой путь в
+              электронной коммерции и вам нужен уникальный дизайн онлайн
+              магазина для стартапа, обратитесь к нашему веб дизайнеру. За
+              выгодную цену и короткий период времени, он поможет
+              визуализировать ваш веб-проект.
+            </p>
+            <button class="primary-button-inform" type="button">
+              <span class="primary-button-text">Оставить заявку</span>
+            </button>
           </div>
         </div>
         <div class="discussion">
