--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@ confectioner"
             alt="sphere"
           />
 
-          <div>
+          <div class="inform-wrapper">
             <h2 class="inform-text">Необходимо больше информации?</h2>
             <img
               class="inform-img"
